fixed content alignment

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h4{
     }
 
     .content{
-        margin: 50px;
+        margin: 20px;
     }
 
     .nav-wrapper{
@@ -185,17 +185,40 @@ h4{
         margin-right: 15px;
     }
 
-    .wrapper{
+    .content{
         width: 800px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
-    .menu{
-        width: 780px;
+    .nav-wrapper{
+        width: 800px;
+        
     }
 
     .menu-item.theme-switcher{
         display: inline;
         margin-left: auto;
+    }
+
+    h1{
+        font-size: calc(48pt);
+        margin-top: 20px;
+    }
+    
+    h2{
+        font-size: calc(36pt);
+        margin-top: 20px;
+    }
+    
+    h3{
+        font-size: calc(24pt);
+        margin-top: 20px;
+    }
+    
+    h4{
+        font-size: calc(14pt);
+        margin-top: 20px;
     }
 
 }
